fix(web): position simulate button relative on smaller screens

--- a/apps/web/src/components/transactions/TxDetails/styles.module.css
+++ b/apps/web/src/components/transactions/TxDetails/styles.module.css
@@ -113,3 +113,9 @@
     border-top: 1px solid var(--color-border-light);
   }
 }
+
+@media (max-width: 1350px) {
+  .inlineSimulation {
+    position: relative;
+  }
+}
